--- a/amazon/commercial/package.json
+++ b/amazon/commercial/package.json
@@ -8,7 +8,9 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.4.1",
+    "react-autosuggest": "^8.0.0",
     "react-dom": "^15.4.1"
   },
   "scripts": {
@@ -16,5 +18,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
