--- a/amazon/commercial/package.json
+++ b/amazon/commercial/package.json
@@ -8,6 +8,7 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "autosuggest-highlight": "^3.1.0",
     "classnames": "^2.2.5",
     "react": "^15.4.1",
     "react-autosuggest": "^8.0.0",
