--- a/commercial/package.json
+++ b/commercial/package.json
@@ -13,7 +13,11 @@
     "react": "^15.4.1",
     "react-autosuggest": "^8.0.0",
     "react-dom": "^15.4.1",
-    "superagent": "^3.3.2"
+    "superagent": "^3.3.2",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.0",
+    "redux-logger": "^2.0.2",
+    "redux-thunk": "^0.1.0"    
   },
   "scripts": {
     "start": "react-scripts start",
